<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/spacing_medium">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent" android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/spacing_medium"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etSeasonName" android:layout_width="match_parent"
                android:layout_height="wrap_content" android:hint="@string/season_name" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent" android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/spacing_medium"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etSeasonStartDate" android:layout_width="match_parent"
                android:layout_height="wrap_content" android:hint="@string/start_date" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent" android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/spacing_medium"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etSeasonEndDate" android:layout_width="match_parent"
                android:layout_height="wrap_content" android:hint="@string/end_date" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent" android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/spacing_medium"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etAlertDays" android:layout_width="match_parent"
                android:layout_height="wrap_content" android:hint="@string/alert_days"
                android:inputType="number" />
        </com.google.android.material.textfield.TextInputLayout>

        <CheckBox
            android:id="@+id/cbSeasonActive"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/active"
            android:layout_marginBottom="@dimen/spacing_medium" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent" android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/spacing_medium"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etSeasonNotes" android:layout_width="match_parent"
                android:layout_height="wrap_content" android:hint="@string/notes" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnSaveSeason"
            android:layout_width="match_parent" android:layout_height="wrap_content"
            android:text="@string/save" />

    </LinearLayout>
</ScrollView>
